# Twitter-Bot

twitter-generator/: Cargo.toml
twitter-generator/src/: main.rs  openai.rs
