[package]
name = "twitter-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-util = "0.1.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"]}
serde = { version = "1.0.201", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros"] }
